2011-02-07  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update.

        * platform/chromium/test_expectations.txt:

2011-02-07  James Robinson  <jamesr@chromium.org>

        Reviewed by Dan Bernstein.

        Move the sputnik test suite out of fast/js/
        https://bugs.webkit.org/show_bug.cgi?id=53954

        The sputnik suite shouldn't go in fast/js/ because it is not fast and
        it is an imported test suite.  This moves it to LayoutTests/sputnik
        and updates references in skipped lists / expectations.

        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2011-02-07  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update.

        * platform/chromium/test_expectations.txt:

2011-02-03  MORITA Hajime  <morrita@google.com>

        Reviewed by Darin Fisher.

        [Chromium] Should implement EditorClientImpl::requestCheckingOfString()
        https://bugs.webkit.org/show_bug.cgi?id=51013

        Unskipped passed test.
        
        * platform/chromium/test_expectations.txt:

2011-02-07  Martin Robinson  <mrobinson@igalia.com>

        Classify tests failing in the fast directory on GTK+. Add results for
        tests that just need platform expectations.

        * platform/gtk/Skipped: Update the skipped list.
        * platform/gtk/fast/backgrounds/background-clip-text-expected.checksum: Added.
        * platform/gtk/fast/backgrounds/background-clip-text-expected.png: Added.
        * platform/gtk/fast/backgrounds/background-clip-text-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-zoom-expected.txt: Added.
        * platform/gtk/fast/css/css1_forward_compatible_parsing-expected.checksum: Added.
        * platform/gtk/fast/css/css1_forward_compatible_parsing-expected.png: Added.